src/test/ui/generics/generic-no-mangle.stderr
error: functions generic over types or consts must be mangled
  --> $DIR/generic-no-mangle.rs:6:1
   |
LL | #[no_mangle]
   | ------------ help: remove this attribute
LL | pub fn foo<T>() {}
   | ^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/generic-no-mangle.rs:3:9
   |
LL | #![deny(no_mangle_generic_items)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: functions generic over types or consts must be mangled
  --> $DIR/generic-no-mangle.rs:9:1
   |
LL | #[no_mangle]
   | ------------ help: remove this attribute
LL | pub extern "C" fn bar<T>() {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

